# ElaMetaType

./: CMakeLists.txt  README.md
3RD/lz4-1.10.0/: CMakeLists.txt
ElaMetaType/: CMakeLists.txt  ElaMetaBuffer.cpp  ElaMetaBuffer.h  ElaMetaCollection.h  ElaMetaField.h  ElaMetaType.cpp  ElaMetaType.h  ElaMetaTypeConfig.cmake.in  ElaMetaTypeExport.h  ElaMetaTypeMacro.h  ElaMultiFieldMacro.h  ElaProperty.h  ElaSingleton.h  ElaVariant.cpp  ElaVariant.h
ElaMetaType/private/: ElaMetaEndian.cpp  ElaMetaEndian.h  ElaMetaTypePrivate.cpp  ElaMetaTypePrivate.h
ElaMetaType/pugixml/: pugixml.cpp  pugixml.h
ElaMetaTypeExample/: CMakeLists.txt  ElaMetaTypeExample.qrc  MainWindow.cpp  MainWindow.h  TestDefine.h  main.cpp
